--- a/app/menu.html
+++ b/app/menu.html
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav">
           <li ><a href='user_site.php'>Your Profile</a></li>
           <li><a href="all_users.php">Users</a></li>
-        <li><a href="#">Messages</a></li>
+        <li><a href="messages_site.php">Messages</a></li>
       </ul>
  
       <ul class="nav navbar-nav navbar-right">
